# Lab1_FP

./: .gitignore  docker-compose.yml  faculty-services.cabal
app/: Main.hs
docker/mysql/init/: 01_schema.sql  02_seed.sql
src/: CLI.hs  DAO.hs  DB.hs  Models.hs
