cabal-version:      3.0
name:               faculty-services
version:            0.1.0.0
build-type:         Simple

executable faculty-services
  main-is:            Main.hs
  hs-source-dirs:     app, src
  other-modules:      Models
                    , DAO
                    , DB
                    , CLI
  build-depends:      base ^>=4.18
                    , mysql-haskell
                    , text
                    , bytestring
                    , transformers
                    , io-streams
  default-language:   Haskell2010


